--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,5 +5,5 @@ search_enabled: true
 
 # Aux links for the upper right navigation
 aux_links:
-  'fp-ts-mailerlite on GitHub':
+  '@frederic-latour/fp-ts-mailerlite on GitHub':
     - 'https://github.com/FredericLatour/fp-ts-mailerlite'
